--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,13 +110,13 @@ jobs:
           Write-Host "Installer filename: $name"
 
       # -----------------------------------------------------------------------
-      - name: Clean version for .NET
-        shell: pwsh
+      - name: Extract version
+        shell: bash
         run: |
-          $raw = "${{ steps.resolve_version.outputs.version }}"
-          $clean = $raw.TrimStart("v")
-          echo "VERSION=$clean" >> $env:GITHUB_ENV
-          Write-Host "Clean .NET version: $clean"
+          RAW_VERSION=${GITHUB_REF_NAME}
+          CLEAN_VERSION=${RAW_VERSION#v}
+          echo "VERSION=$CLEAN_VERSION" >> $GITHUB_ENV
+
    
 
       # -----------------------------------------------------------------------
